[tool.poetry]
name = "sse-asyncqueue-langgraph"
version = "0.1.0"
description = ""
authors = ["mujeesh2-eng <mujeesh2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.136.3"}
langchain = "^1.3.6"
langgraph = "^1.2.4"
langchainhub = "^0.1.21"
langchain-ollama = "^1.1.0"
pydantic = "^2.13.4"
langchain-core = "^1.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
